2007-10-19  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* changes for working with TrigT1Calo-02-00-00: removing some (not needed) references to obsolete files

	restructuring:
	* merge JetElementMon and JEMMon to JEMMon
	* new tool for JEP Transmission and Performance Checks: JEPTransPerfMon.h
	* delete SimBS.h, move existing code to JEPTransPerfMon
	* move transmission checks from CMMMon to JEPTransPerfMon
	* new checks in JEPTransPerfMon
	* new Tool für PPr Performance Checks: PPrPerfMon
	* move comparison with calorimeters from CaloTT to PPrPerfMon
	
2007-10-18 Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * updates to TrigT1CaloCpmMonTool.

2007-10-08 David Quarrie <David.Quarrie@cern.ch>
	* tag TrigT1CaloMonitoring-00-01-10
	* TrigT1CaloMonitoring/TriggerTowerMon.h: Remove redundant ";"
	* src/components/TrigT1CaloMonitoring_entries.cxx: Remove redundant ";"
	
2007-08-29  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* tag TrigT1CaloMonitoring-00-01-09
	* add new TriggerTower Error Histograms: GLink Down and GLink Timeout for em and had

2007-08-21  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* tag TrigT1CaloMonitoring-00-01-06
	* share/TrigT1CaloMonitoring_topOptions.py: Add new flag doLVL1CaloCPJEPMonitoring for running within RecExCommission with no CP/JEP data in bytestream (switch off monitoring -> suppresses error messages concerning ROB fragments)
	* add JO for running within AthenaPT
	* add name of JO for running within RecExCommission (TrigT1CaloMonitoring_forRecExCommission.py)

2007-08-15  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* tag TrigT1CaloMonitoring-00-01-05
        * add src/SourceIDTool.cxx TrigT1CaloMonitoring/SourceIDTool.h for dumping SourceIDs that exist in the SW
	* update requirements file (due to checkreq problems)
	* adjust JobOptions to RecExCommission for M4

2007-08-08  Johanna Fleckner  <Johanna.Fleckner@uni-mainz.de>
	* tag TrigT1CaloMonitoring-00-01-04